--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		</ul>
 	</section>
 	<section>
-		<nav id="two">
+		<nav id="two" class='cl'>
 			<a href="" class="blank"><i class="iconfont prev">&#xe603;</i>萌站集结<i class="iconfont next">&#xe603;</i></a>
 			<a href="" class="blue active"><i class="iconfont prev">&#xe642;</i>在线视频<i class="iconfont next">&#xe642;</i></a>
 			<a href="" class="red"><i class="iconfont prev">&#xe670;</i>新闻资讯<i class="iconfont next">&#xe670;</i></a>
