first change index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>记录地平线之境界的彼方</title>
+    <title>记录地平线之境界的彼方 - logacg.com</title>
     <link href="dist/jquery-sakura.min.css" rel="stylesheet" type="text/css">
     <style type="text/css">
     html {
